# ResnetLibtorch

./: CudaTestCode.txt  README.md  Resnet18-Fashion-MNIST-train.py  Resnet18-Fashion-MNIST.py  Resnet18-MNIST.py  Resnet18.py  TraceModelAndTest_Fashion-MNIST.py  TraceModelAndTest_MNIST.py  TrainLog_Resnet_MNIST_GPU.txt  TraingLog_Resnet_Fashion-MNIST_GPU.txt  pipeline-env.yaml  trace.py  tracing.py  tracingtest.py
C++/: CMakeLists.txt  main.cpp
